Adding a method to get maximum records in a page.

--- a/src/main/java/DB/config/DBApp.config
+++ b/src/main/java/DB/config/DBApp.config
@@ -1,6 +1,1 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-  <appSettings>
-    <add key="maximumNumberOfRows" value="200" />
-  </appSettings>
-</configuration>
+maximumNumberOfRows = 200
